# pytest-param-files

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: python-package.yml  tests.yml
pytest_param_files/: __init__.py  main.py
tests/: test_basic.py  test_isolated.py
tests/fixtures/: basic.txt  basic.yaml
