[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pytest_param_files"
dynamic = ["version", "description"]
authors = [{name = "Chris Sewell", email = "chrisj_sewell@hotmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Framework :: Pytest"

]
keywords = ["pytest", "parameterized"]
requires-python = ">=3.7"
dependencies = ["pytest"]

[project.urls]
Home = "https://github.com/chrisjsewell/pytest-param-files"

[project.entry-points."pytest11"]
pytest_param_files = "pytest_param_files.main"

[project.optional-dependencies]
develop = ["black"]

[tool.isort]
profile = "black"
force_sort_within_sections = true
